<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tim.footballscore.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/backGroundBr"
            android:orientation="vertical">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/broncos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="43dp"
                android:text="@string/tv_Broncos"
                android:textColor="@color/broncos"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreBroncos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="56sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="addSevenBroncos"
                android:text="@string/b_Touchdown"
                android:theme="@style/broncosButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="addOneBroncos"
                android:text="@string/b_ExtraPoint"
                android:theme="@style/broncosButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="addThreeBroncos"
                android:text="@string/b_FieldGoal"
                android:theme="@style/broncosButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="addTwoBroncos"
                android:text="@string/b_2PtConv"
                android:theme="@style/broncosButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="addSafetyBroncos"
                android:text="@string/b_Safety"
                android:theme="@style/broncosButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/backGroundSh"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/seahawks" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/tv_Seahawks"
                android:textColor="@color/seahawks"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreSeahawks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="56sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tdSeahawks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="addSevenSeahawks"
                android:text="@string/b_Touchdown"
                android:theme="@style/seahawksButton" />

            <Button
                android:id="@+id/exPtSeahawks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="addOneSeahawks"
                android:text="@string/b_ExtraPoint"
                android:theme="@style/seahawksButton" />

            <Button
                android:id="@+id/fgSeahawks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="addThreeSeahawks"
                android:text="@string/b_FieldGoal"
                android:theme="@style/seahawksButton" />

            <Button
                android:id="@+id/convSeahawks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="addTwoSeahawks"
                android:text="@string/b_2PtConv"
                android:theme="@style/seahawksButton" />

            <Button
                android:id="@+id/safetySeahawks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="addSafetySeahawks"
                android:text="@string/b_Safety"
                android:theme="@style/seahawksButton" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/darker_gray">

    </View>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="resetScores"
        android:text="reset"
        android:theme="@style/resetButton" />

</RelativeLayout>
